securitygroup.tf
resource "aws_security_group" "sg_ecs_cluster" {
  vpc_id      = "${aws_vpc.umg.id}"
  name        = "sg_umg_public"
  description = "security group that allows ssh,http and all egress traffic"

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = ["${aws_security_group.alb_securitygroup.id}"]
  }

  ingress {
    from_port       = 8080
    to_port         = 8080
    protocol        = "tcp"
    security_groups = ["${aws_security_group.alb_securitygroup.id}"]
  }

  tags {
    Name = "sg_dev_public"
  }
}

resource "aws_security_group" "alb_securitygroup" {
  vpc_id      = "${aws_vpc.umg.id}"
  name        = "sg_alb"
  description = "security group for ecs"

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags {
    Name = "sg_alb"
  }
}
